Quick fix for button break on mobile.

--- a/src/components/Navbar/navbar.module.scss
+++ b/src/components/Navbar/navbar.module.scss
@@ -19,27 +19,34 @@
 
 .Navbar_actions {
     padding-right: 1.5rem;
+
     @media (max-width: $md - 1) {
         padding-right: 0.5rem;
     }
 }
+
 .Navbar_logo {
     max-height: 24px;
     margin-right: 0.75rem;
+
     @media (min-width: $md) {
         max-height: 40px;
     }
 }
+
 .Navbar_logoContainer {
     color: $text-primary;
     font-size: 1.25rem;
     font-weight: 400;
     padding-left: 1.5rem;
     text-decoration: none;
-    width: $sidebar-width;
+
     &__isSignedIn {
-        @media (max-width: $md - 1) {
-            display: none;
+        display: none;
+
+        @media (min-width: $md) {
+            display: flex;
+            width: $sidebar-width;
         }
     }
 }
@@ -47,11 +54,13 @@
 .Navbar_menu {
     display: none;
     padding: 0 0.5rem;
+
     @media (max-width: $md-max) {
         display: flex;
         align-items: center;
     }
 }
+
 .Navbar_spacer {
     flex-grow: 1;
 }
@@ -65,6 +74,7 @@
 .AppBar__signedIn {
     background: white;
     box-shadow: none;
+
     @media (min-width: $md) {
         border-bottom: 1px solid $grey-A100;
     }
@@ -72,6 +82,7 @@
 
 .card {
     margin: 0.5rem 1rem;
+
     @media (min-width: $md) {
         margin: 0;
         box-shadow: none;
@@ -89,6 +100,7 @@
 
 .title__signedIn {
     display: none;
+
     @media (min-width: $md) {
         display: block;
         text-decoration: none;
@@ -99,6 +111,7 @@
     display: flex;
     color: $button-grey;
     align-items: center;
+
     @media (min-width: $md) {
         min-width: 236px;
     }
